# planner

./: .gitignore  AGENTS.md  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: local_visual_regression.py
src/planner/: components.py  config.py  drawing.py  main.py  planner_geometry.py  profiles.py  rendering.py  template_geometry.py  template_layout.py  template_renderers.py  template_specs.py  templates.py  theme_profiles.py
src/planner/template_blocks/: __init__.py  core.py
src/planner/template_engine/: __init__.py  contracts.py  params.py  plugins.py  registry.py
tests/: test_cli.py  test_components.py  test_main.py  test_planner_geometry.py  test_profiles.py  test_template_engine.py  test_template_geometry.py  test_template_plugins.py  test_templates.py  test_theme_profiles.py
