[project]
name = "planner"
version = "0.1.0"
description = "Generate a printable yearly planner PDF."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "reportlab>=4.4.9",
]

[project.scripts]
planner = "planner.main:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
